--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header-cover">
     <div class="header-top">
-      <h1><a href="#">PraDeep</a></h1>
+      <h1><a id="home" href="#">PraDeep</a></h1>
       <ul class="top-menu">
         <li>
           <a>
@@ -216,9 +216,6 @@
     </div>
   </div>
   <div class="float-mark"></div>
-  <!-- <div class="scrollbar">
-    <div class="scrollbar-thumb"></div>
-  </div> -->
 
   <script src="./js/scroll.js"></script>
 </body>
